css/main.css
/* Base Styles */

* {
  box-sizing: border-box;
}

.grid-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  grid-template-areas:
  "header"
  "nav"
  "main";
}

.widget-container-full, .widget-container-half {
  width: 95vw;
}


/* Header Styles */

header {
  grid-area: header;
  background-color: #7479ba;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

header h1 {
  color: #fff;
  margin: 0 auto 0 0;
  font-size: 1.5em
}

header h3 {
  color: #fff;
  font-weight: 300;
  padding-left: 5px;
  margin-left: 5px;
  font-size: 1em;
}

header span {
  font-weight: 200;
}


.bell-container {
  border-right: solid 1px #4d4c72;
  padding: 5px;
  margin-right: 10px;
  position: relative;
}

.bell {
  height: 25px;
  padding-right: 5px;
}

.bell:hover {
  transform: rotate(20deg);
  cursor: pointer;
}

.new-notification {
  background-color: #81c98f;
  height: 7px;
  width: 7px;
  border-radius: 50%;
  position: absolute;
  top: 2px;
  right: 8px;
}


.profile-image {
  height: 35px;
  border-radius: 50%;
}

#notifications {
  position: absolute;
  background: #fff;
  top: 7%;
  right: -5%;
  border: solid 1px #666;
  z-index: 1000;
}

.notificationList {
  padding: 15px;
}

.notificationText p {
  color: #7479ba;
  margin-top: 0;
  margin-bottom: 15px;
  padding-bottom: 15px;
  border-bottom: solid 1px #bbb;
}

.notificationText:last-child p {
  margin-bottom: 0;
  padding-bottom: 0;
  border-bottom: none;
}

/* Nav Styles */

nav {
  grid-area: nav;
  background-color: #4d4c72;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.nav-icon {
  height: 30px;
}

/* Main Styles */

main {
  grid-area: main;
  display: grid;
}

.section-title {
    font-size: 1em;
    text-transform: uppercase;
    color: #666;
    font-weight: 400;
    padding: 5px;
}

/* Dashboard and Search Styles */
.main-header {
  display: flex;
  align-items: center;
}

.main-header h2 {
 padding: 20px;
 color: #666;
 margin: 0;
 font-weight: 400;
 font-size: 1.25em;
}

.main-header-search {
  background: #f3f4f7;
  width: 100%;
  text-align: right;
  padding: 10px 20px;
  border-bottom: solid 1px #bbb;
  border-left: solid 1px #bbb;
  position: relative;
  text-indent: 10px;
}

.main-header input {
  padding: 10px;
  width: 75%;
  border-radius: 5px;
  border: solid 1px #bbb;
}

::placeholder {
  color: lightgrey;
  text-transform: uppercase;
  font-size: .75em;
}

#magnify-glass {
  position: absolute;
  top: 22px;
  right: 35px;
  color: #7479ba;
}

/* Alert Styles */

.alert {
  padding: 15px;
}

.alert-banner {
  background: #7479ba;
  padding: 5px 15px;
  color: #fff;
  display: flex;
  border-radius: 5px;
  width: 100%;
}

.alert-banner-close {
  margin-left: auto;
  text-transform: uppercase;
}

.alert-banner-close:hover {
  cursor: pointer;
}

/* Traffic Styles */

.traffic {
  padding: 20px;
}

.traffic-header {
  display: flex;
  padding: 10px 0;
}

.traffic-nav {
  display: flex;
  margin-left: auto;
  list-style: none;
}

.traffic-nav li {
  padding: 10px;
  border-radius: 20px;
  font-size: .85em;
  color: #666;
}

.traffic-nav li:hover {
  cursor: pointer;
}

.active {
  background-color: #81c98f;
  color: #fff !important;
}

.traffic, .mobile-users, .daily, .social-container, .members, .activity, .message {
  border-bottom: 1px solid lightgrey;
}

.daily, .members, .message {
  border-right: 1px solid lightgrey;
}

.daily, .mobile-users {
  padding: 20px 20px 35px 20px;
}

/* Social Stat Styles */

.social-container {
  padding: 15px 20px 35px 20px;
}

.inner-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  padding: 10px 0;
}

.social-image svg {
  height: 70px;
  width: auto;
  background: #7479ba;
  border-radius: 50%;
  /* padding: 10px; */
}

.social-image path {
  fill: #fff;
  height: auto;
}

.social-box {
  align-self: center;
  background-color: #f3f4f7;
  padding: 10px 40px 10px 10px;
  margin: 5px;
  border: solid 1px #bbb;
  display: flex;
  min-width: 299px;
}

.social-image {
  padding: 0 20px 0 10px;
}

.social-text p:nth-child(1) {
  color: #7479ba;
  font-weight: 600;
  font-size: 1.25em;
  margin: 0;
}

.social-text p:nth-child(2) {
  font-size: 3em;
  color: #666;
  margin: 0;
  font-weight: 300;
}

/* New Member Styles */

.members {
  padding: 20px;
}

.members h3 {
  margin: 10px 0;
}

.members-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border-bottom: solid 1px lightgrey;
  padding-bottom: 15px;
  padding-top: 15px;
  width: 100%;
}

.members .members-container:nth-child(2) {
  padding-top: 0;
}
.members .members-container:nth-child(5) {
  border-bottom: none;
  padding-bottom: 0;
}

.member-image {
  margin-right: 10px;
}

.members-text {
  width: 100%;
}

.members-text p {
  margin: 0;
}

.members-container p:nth-child(1) {
  color: #999;
  font-size: .9em;
  font-weight: 600;
}

.member-date {
  font-size: .8em;
  color: #666;
  font-weight: 400;
  align-self: center;

}

.members-container a {
  color: #7479ba;
  text-decoration: none;
  font-size: .9em;
}

/* Activity Styles */

.activity {
  padding: 20px;
}

.comment {
  font-size: 1em;
  color: #666;
  font-weight: 400;

}

.comment-time {
  margin: 0;
  font-size: .9em;
  color: #666;
  font-weight: 400;
}

.activity .members-container:nth-child(2) {
  padding-top: 0;
}
.activity .members-container:nth-child(5) {
  border-bottom: none;
  padding-bottom: 0;
}

.activity h3 {
  margin: 10px 0;
  width: auto;
}

.right-arrow {
  display: none;
  align-self: center;
  color: #7479ba;
}

/* Message User Styles */

.message {
  padding: 10px 20px;
  margin-bottom: 25px;
}

#userField, #messageField {
  background: #f3f4f7;
  width: 100%;
  border: solid 1px #bbb;
  height: 40px;
  border-radius: 5px;
  text-indent: 10px;
  margin-bottom: 20px;
}

#messageField {
  height: 120px;
  padding: 10px;
  text-indent: 0;
  margin-bottom: 27px;
}

#send {
  background: #7479ba;
  padding: 10px;
  border-radius: 5px;
  width: 100%;
  color: #fff;
  text-transform: uppercase;
  border: none;
}

.visually-hidden {
  display: none;
}

.autofill {
  display: inline-block;
  position: relative;
  width: 100%;
}

.autofill>ul {
  background: #fff;
  position: absolute;
  list-style: none;
  border-radius: 5px;
  border: 1px solid #bbb;
  z-index: 1000;
  top: 65%;
  margin: 0;
  padding: 5px;
}

.autofill>ul>li {
  padding: 5px;
  color: #666;
}

.autofill>ul>li:hover {
  cursor: pointer;
}

mark {
  background: none;
  color: #666;
  font-weight: 600;
}

/* Settings Styles */

.settings {
  padding: 10px 20px;
  margin-bottom: 25px;
}

.switch-light {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding-bottom: 30px;
}

.switch-light strong {
  flex-basis: 60%;
  color: #666;
}

.switch-ios.switch-light > span {
  width: 50%;
  max-width: 100px;
}

.switch-ios.switch-light input:checked ~ span {
  border-color: #7479ba;
  box-shadow: inset 0 0 0 30px #7479ba;
}

.switch-ios.switch-light input:checked ~ span a {
  border-color: #7479ba;
}

#timezone {
  width: 100%;
  height: 40px;
  background: #f3f4f7;
  border: solid 1px #bbb;
  margin-bottom: 15px;
  border-radius: 5px;
  color: #666;
  margin-top: 10px;

}

.settings-button {
  display: flex;
  justify-content: space-around;
}

#save {
  width: 50%;
  padding: 10px;
  background: #7479ba;
  border-radius: 5px;
  color: #fff;
  text-transform: uppercase;
  border: none;
}

#cancel {
  width: 50%;
  padding: 10px;
  background: #bbb;
  border-radius: 5px;
  color: #fff;
  text-transform: uppercase;
  margin-left: 15px;
  border: none;
}

.timezone-label {
  color: #666;
}



/* Media Queries */

@media (min-width: 768px) {

  .grid-container {
    grid-template-columns: 55px 1fr;
    grid-template-areas:
      "header header"
      "nav main";
  }

  nav {
    flex-direction: column;
    justify-content: flex-start;
  }

  nav a {
    padding: 10px;
  }

  main {
    grid-template-columns: 1fr 1fr;
  }

  .main-header, .traffic, .social-container, .alert {
    grid-column: 1 / span 2;
  }

  .daily, .members, .message {
    grid-column: 1 / span 1;

  }

  .mobile-users, .activity, .settings {
    grid-column: 2 / span 1;
  }

  .main-header input {
    width: 50%;
  }

  .message {
    border-bottom: none;
  }

  .members-text {
    width: 75%;
  }

  .member-date {
    margin: 0 0 0 auto;
  }

  .right-arrow {
    display: inline-block;
    margin-left: auto;
  }

  .switch-light strong {
    flex-basis: 30%;
  }

  .widget-container-full {
    width: 90vw;
  }

  .widget-container-half {
    width: 45vw;
  }

  #notifications {
    right: 17%;
  }


}

@media (min-width: 1024px) {

  #notifications {
    right: 15%;
  }

}

